--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -8,4 +8,13 @@
 /* purgecss start ignore */
 html {
   @apply antialiased;
+
+  .slider {
+    height: 100vh;
+    width: 100%;
+  }
+
+  .slide {
+    width: 100vw;
+  }
 }
