--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -101,6 +101,14 @@
     }
   }
 
+  .line-clamp {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
   @variants responsive {
     .gutter-s {
       padding-left: 0.625rem;
@@ -115,6 +123,11 @@
     .gutter-l {
       padding-left: 4.5rem;
       padding-right: 4.5rem;
+    }
+
+    .vert-space-s {
+      margin-top: 3rem;
+      margin-bottom: 3rem;
     }
   }
 }
