--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -187,6 +187,28 @@
     border-right: 1px solid #4348e3;
   }
 
+  .circle-position {
+    display: none;
+    top: 0;
+    transform: translate(calc(100% / 3), calc(-100% / 3));
+
+    @media (min-width: 640px) {
+      width: 6rem;
+      display: block;
+      right: calc((100% / 6) + 1.5rem);
+    }
+
+    @media (min-width: 768px) {
+      width: 9rem;
+      right: calc((100% / 6) + 2.5rem);
+    }
+
+    @media (min-width: 1280px) {
+      width: 11rem;
+      right: calc((100% / 6) + 3rem);
+    }
+  }
+
   .form-divider::after {
     content: '';
     position: absolute;
@@ -206,7 +228,7 @@
   }
 
   .text-stroke-blue {
-    -webkit-text-stroke: 1px #2C148E;
+    -webkit-text-stroke: 1px #2c148e;
   }
 
   .line-clamp-p {
@@ -214,7 +236,7 @@
   }
 
   .shadow-blue-dark {
-    box-shadow: 0.2rem 0.2rem #2C148E;
+    box-shadow: 0.2rem 0.2rem #2c148e;
   }
 
   @variants responsive {
