--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -109,6 +109,10 @@
     }
   }
 
+  .w-11\/10 {
+    width: 110%;
+  }
+
   .w-188 {
     width: 47rem;
   }
@@ -129,6 +133,24 @@
   .px-1\/8 {
     padding-left: calc(100% / 8);
     padding-right: calc(100% / 8);
+  }
+
+  .pl-1\/8 {
+    padding-left: 12.5%;
+  }
+
+  .mask-test {
+    flex-grow: 1;
+    height: 100%;
+    max-height: 100%;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
   }
 
   .right-1\/20 {
@@ -187,6 +209,10 @@
     border-right: 1px solid #4348e3;
   }
 
+  .-translate-x-1\/20 {
+    transform: translateX(-5%);
+  }
+
   .circle-position {
     display: none;
     top: 0;
@@ -239,6 +265,10 @@
     box-shadow: 0.2rem 0.2rem #2c148e;
   }
 
+  .shadow-white {
+    box-shadow: 0.2rem 0.2rem #FFFFFF;
+  }
+
   @variants responsive {
     .nav-gutter-sm {
       padding-left: 0.625rem;
@@ -278,6 +308,10 @@
     .body-gutter-2xl {
       padding-left: 8rem;
       padding-right: 8rem;
+    }
+
+    .ml-1\/2 {
+      margin-left: 50%;
     }
   }
 }
