--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -193,6 +193,18 @@
     min-height: 24rem;
   }
 
+  .max-h-112 {
+    max-height: 28rem;
+  }
+
+  .max-h-144 {
+    max-height: 36rem;
+  }
+
+  .max-h-70vh {
+    max-height: 70vh;
+  }
+
   .max-h-hero {
     max-height: 60vh;
   }
