--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -117,8 +117,20 @@
     width: 110%;
   }
 
+  .w-68 {
+    width: 17rem;
+  }
+
+  .w-88 {
+    width: 22rem;
+  }
+
   .w-188 {
     width: 47rem;
+  }
+
+  .leading-0 {
+    line-height: 0;
   }
 
   .leading-30 {
@@ -143,18 +155,24 @@
     padding-left: 12.5%;
   }
 
-  .mask-test {
-    flex-grow: 1;
+  .mask-nav {
+    //flex-grow: 1;
     height: 100%;
     max-height: 100%;
 
-    background-size: cover;
+    //background-size: cover;
+    background-size: 16rem;
     background-position: center;
     background-repeat: no-repeat;
 
     mask-size: contain;
+    //mask-size: 16rem;
     mask-repeat: no-repeat;
     mask-position: center;
+
+    //@media (min-width: 1024px) {
+    //  background-size: cover;
+    //}
   }
 
   .right-1\/20 {
@@ -189,6 +207,10 @@
     bottom: calc(100% * 5 / 6);
   }
 
+  .min-h-80 {
+    min-height: 20rem;
+  }
+
   .min-h-96 {
     min-height: 24rem;
   }
@@ -207,6 +229,10 @@
 
   .max-h-hero {
     max-height: 60vh;
+  }
+
+  .min-w-64 {
+    min-width: 16rem;
   }
 
   .min-w-footer {
@@ -230,14 +256,13 @@
   }
 
   .circle-position {
-    display: none;
+    width: 6rem;
+    right: calc((100% / 6) + 1.5rem);
     top: 0;
     transform: translate(calc(100% / 3), calc(-100% / 3));
 
     @media (min-width: 640px) {
-      width: 6rem;
       display: block;
-      right: calc((100% / 6) + 1.5rem);
     }
 
     @media (min-width: 768px) {
@@ -247,7 +272,12 @@
 
     @media (min-width: 1280px) {
       width: 11rem;
-      right: calc((100% / 6) + 3rem);
+      right: calc((100% / 6) + 6rem);
+    }
+
+    @media (min-width: 1536px) {
+      width: 11rem;
+      right: calc((100% / 6) + 8rem);
     }
   }
 
@@ -281,29 +311,37 @@
     box-shadow: 0.2rem 0.2rem #2c148e;
   }
 
+  .shadow-lime {
+    box-shadow: 0.2rem 0.2rem #dfff85;
+  }
+
   .shadow-white {
     box-shadow: 0.2rem 0.2rem #ffffff;
   }
 
   @variants responsive {
-    .nav-gutter-sm {
-      padding-left: 0.625rem;
-      padding-right: 0.625rem;
-    }
-
-    .nav-gutter-lg {
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
-    }
-
-    .nav-gutter-xl {
-      padding-left: 2.5rem;
-      padding-right: 2.5rem;
-    }
-
+    //.nav-gutter-sm {
+    //  padding-left: 0.625rem;
+    //  padding-right: 0.625rem;
+    //}
+    //
+    //.nav-gutter-lg {
+    //  padding-left: 1.5rem;
+    //  padding-right: 1.5rem;
+    //}
+    //
+    //.nav-gutter-xl {
+    //  padding-left: 2.5rem;
+    //  padding-right: 2.5rem;
+    //}
     .vert-space-s {
       margin-top: 2rem;
       margin-bottom: 2rem;
+    }
+
+    .arrow-gutter-sm {
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
     }
 
     .body-gutter-sm {
