added object fit prop to contentful image

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -304,10 +304,10 @@
     }
 
     .image {
-      //object-fit: cover;
-      //width: 100% !important;
-      //position: relative !important;
-      //height: unset !important;
+      object-fit: cover;
+      width: 100% !important;
+      position: relative !important;
+      height: unset !important;
     }
   }
 
