--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -279,6 +279,10 @@
     min-width: 16rem;
   }
 
+  .min-w-200 {
+    min-width: 50rem;
+  }
+
   .min-w-footer {
     min-width: 1440px;
   }
@@ -358,6 +362,29 @@
     }
   }
 
+  .contact-swirl-position {
+    display: none;
+
+
+    @media (min-width: 1024px) {
+      display: block;
+      position: absolute;
+      width: 9rem;
+      top: 37.5%;
+      left: calc(50% + 3rem);
+    }
+
+    @media (min-width: 1280px) {
+      top: 30%;
+      width: 11rem;
+    }
+
+    @media (min-width: 1536px) {
+      left: calc(50% + 3.5rem);
+      width: 12rem;
+    }
+  }
+
   .form-divider::after {
     content: '';
     position: absolute;
@@ -392,6 +419,10 @@
     box-shadow: 0.2rem 0.2rem #2c148e;
   }
 
+  .shadow-blue-dark-lg {
+    box-shadow: 0.3rem 0.3rem #2c148e;
+  }
+
   .shadow-lime {
     box-shadow: 0.2rem 0.2rem #dfff85;
   }
@@ -400,58 +431,56 @@
     box-shadow: 0.2rem 0.2rem #ffffff;
   }
 
-  @variants responsive {
-    .vert-space-s {
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+  .title-position {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    // Large
+    @media (min-width: 1024px) {
+      transform: translate(0, 0);
+      top: 2.75rem;
+      left: 1.5rem;
+      right: 0;
     }
 
-    .arrow-gutter-sm {
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
+    // Xl
+    @media (min-width: 1280px) {
+      left: 4rem;
     }
 
-    .body-gutter-sm {
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
+    // 2xl
+    @media (min-width: 1536px) {
+      left: 6rem;
     }
+  }
 
-    .body-gutter-lg {
-      padding-left: 3rem;
-      padding-right: 3rem;
-    }
+  .grid-row-1 {
+    grid-row: 1;
+  }
 
-    .body-gutter-xl {
-      padding-left: 6rem;
-      padding-right: 6rem;
-    }
+  .grid-col-1 {
+    grid-column: 1;
+  }
 
-    .body-gutter-2xl {
-      padding-left: 8rem;
-      padding-right: 8rem;
-    }
+  .grid-col-2 {
+    grid-column: 2;
+  }
 
-    .ml-1\/2 {
-      margin-left: 50%;
-    }
+  .grid-col-3 {
+    grid-column: 3;
+  }
 
-    //.section-padding {
-    //
-    //  padding-top: 6rem;
-    //  padding-bottom: 6rem;
-    //
-    //  // Xl
-    //  @media (min-width: 1280px) {
-    //    padding-top: 7rem;
-    //    padding-bottom: 7rem;
-    //  }
-    //
-    //  // 2xl
-    //  @media (min-width: 1536px) {
-    //    padding-top: 8rem;
-    //    padding-bottom: 8rem;
-    //  }
-    //}
+  .team-members-bg {
+    background: linear-gradient(
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
+    );
+  }
+
+  .translate-y-10\/12 {
+    transform: translateY(calc(100% * 10 / 12));
   }
 
   .section-margin {
@@ -468,6 +497,40 @@
     @media (min-width: 1536px) {
       margin-top: 9rem;
       margin-bottom: 9rem;
+    }
+  }
+
+  //.contact-margin {
+  //  margin-top: 2rem;
+  //  margin-bottom: 2rem;
+  //
+  //  // Xl
+  //  @media (min-width: 1280px) {
+  //    margin-top: 3rem;
+  //    margin-bottom: 3rem;
+  //  }
+  //
+  //  // 2xl
+  //  @media (min-width: 1536px) {
+  //    margin-top: 4rem;
+  //    margin-bottom: 4rem;
+  //  }
+  //}
+
+  .contact-padding {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+    // Xl
+    @media (min-width: 1280px) {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+    }
+
+    // 2xl
+    @media (min-width: 1536px) {
+      padding-top: 4rem;
+      padding-bottom: 4rem;
     }
   }
 
@@ -540,49 +603,61 @@
     }
   }
 
-  .title-position {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
-    // Large
-    @media (min-width: 1024px) {
-      transform: translate(0, 0);
-      top: 2.75rem;
-      left: 1.5rem;
-      right: 0;
+  @variants responsive {
+    .vert-space-s {
+      margin-top: 2rem;
+      margin-bottom: 2rem;
     }
 
-    // Xl
-    @media (min-width: 1280px) {
-      left: 4rem;
+    .arrow-gutter-sm {
+      padding-left: 0.5rem;
+      padding-right: 0.5rem;
     }
 
-    // 2xl
-    @media (min-width: 1536px) {
-      left: 6rem;
+    .body-gutter-sm {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
     }
+
+    .body-gutter-lg {
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
+
+    .body-gutter-xl {
+      padding-left: 6rem;
+      padding-right: 6rem;
+    }
+
+    .body-gutter-2xl {
+      padding-left: 8rem;
+      padding-right: 8rem;
+    }
+
+    .ml-1\/2 {
+      margin-left: 50%;
+    }
+
+    //.section-padding {
+    //
+    //  padding-top: 6rem;
+    //  padding-bottom: 6rem;
+    //
+    //  // Xl
+    //  @media (min-width: 1280px) {
+    //    padding-top: 7rem;
+    //    padding-bottom: 7rem;
+    //  }
+    //
+    //  // 2xl
+    //  @media (min-width: 1536px) {
+    //    padding-top: 8rem;
+    //    padding-bottom: 8rem;
+    //  }
+    //}
   }
 
-  .grid-row-1 {
-    grid-row: 1;
-  }
-
-  .grid-col-1 {
-    grid-column: 1;
-  }
-
-  .grid-col-2 {
-    grid-column: 2;
-  }
-
-  .team-members-bg {
-    background: linear-gradient(to top, #DFFF85 calc(100% * 7 / 12 + 1rem), white calc(100% * 3 / 12 + 1rem));
-  }
-
-  .translate-y-10\/12 {
-    transform: translateY(calc(100% * 10 / 12));
-  }
 
 }
 
