--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -418,12 +418,12 @@
     -webkit-box-orient: vertical;
   }
 
+  .text-stroke-blue-thin {
+    -webkit-text-stroke: 1px #2c148e;
+  }
+
   .text-stroke-blue {
     -webkit-text-stroke: 2px #2c148e;
-
-    //@media (min-width: 1280px) {
-    //  -webkit-text-stroke: 2px #2c148e;
-    //}
   }
 
   .line-clamp-p {
@@ -488,9 +488,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
