added animation to hero modal

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -499,8 +499,13 @@
   }
 
   .section-margin {
-    margin-top: 6rem;
-    margin-bottom: 6rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+
+    @media (min-width: 1024px) {
+      margin-top: 6rem;
+      margin-bottom: 6rem;
+    }
 
     // Xl
     @media (min-width: 1280px) {
@@ -614,6 +619,48 @@
     // 2xl
     @media (min-width: 1536px) {
       font-size: 13rem;
+    }
+  }
+
+  .hero-modal-center {
+    position: fixed;
+    z-index: 50;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    @media (min-width: 640px) {
+      left: 50%;
+      top: 50%;
+      right: auto;
+      bottom: auto;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .hero-modal-position {
+    position: fixed;
+    z-index: 50;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    @media (min-width: 640px) {
+      left: auto;
+      right: 3rem;
+      bottom: 5.5rem;
+    }
+
+    @media (min-width: 1024px) {
+      right: 4.5rem;
+    }
+
+    @media (min-width: 1280px) {
+      right: 7.5rem;
+    }
+
+    @media (min-width: 1536px) {
+      right: 9.5rem;
     }
   }
 
