updated product list buttons + layout

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -55,6 +55,11 @@
     list-style-type: none;
   }
 
+  //a {
+  //  min-height: 48px;
+  //  min-width: 48px;
+  //}
+
   .overflow-auto {
     overflow: auto;
   }
