--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -601,6 +601,7 @@
   .title-size {
     font-size: 3rem;
     line-height: 0.9;
+    white-space: nowrap;
 
     // Sm
     @media (min-width: 640px) {
@@ -621,7 +622,7 @@
 
     // 2xl
     @media (min-width: 1536px) {
-      font-size: 13rem;
+      font-size: 11rem;
     }
   }
 
