--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -407,6 +407,11 @@
     //}
   }
 
+  .modal-initial-position {
+    transform: translateY(10rem);
+    opacity: 0;
+  }
+
   .contact-swirl-position {
     display: none;
 
@@ -515,9 +520,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
@@ -722,24 +727,19 @@
 
     @media (min-width: 640px) {
       left: auto;
-      //right: 3rem;
       right: 1.5rem;
-      //bottom: 5.5rem;
       bottom: 4rem;
     }
 
     @media (min-width: 1024px) {
-      //right: 4.5rem;
       right: 3rem;
     }
 
     @media (min-width: 1280px) {
-      //right: 7.5rem;
       right: 4rem;
     }
 
     @media (min-width: 1536px) {
-      //right: 9.5rem;
       right: 4rem;
     }
   }
