--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -211,7 +211,11 @@
     mask-position: center;
 
     @media (min-width: 470px) {
-      background-size: 20rem;
+      background-size: 22rem;
+    }
+
+    @media (min-width: 1024px) {
+      background-size: 21rem;
     }
   }
 
