--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -269,6 +269,10 @@
     bottom: calc(100% * 7 / 12);
   }
 
+  .mt-full {
+    margin-top: 100vh;
+  }
+
   .min-h-80 {
     min-height: 20rem;
   }
@@ -527,9 +531,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
