--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -207,21 +207,20 @@
   .mask-nav {
     height: 100%;
     max-height: 100%;
-
-    background-size: 18rem;
-    background-position: center;
-    background-repeat: no-repeat;
-
     mask-size: contain;
     mask-repeat: no-repeat;
     mask-position: center;
+  }
+
+  .mask-background-nav {
+    width: 18rem;
 
     @media (min-width: 470px) {
-      background-size: 22rem;
+      width: 22rem;
     }
 
     @media (min-width: 1024px) {
-      background-size: 21rem;
+      width: 21rem;
     }
   }
 
@@ -531,9 +530,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
