--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -385,6 +385,10 @@
     transform: translateX(-5%);
   }
 
+  .translate-y-11\/10 {
+    --tw-translate-y: 110%;
+  }
+
   .circle-position {
     width: 6rem;
     right: calc((100% / 6));
@@ -530,9 +534,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
