removed selection for desktop and mobile on marquee/slideshow

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -73,6 +73,16 @@
     width: 1px;
   }
 
+  .no-select {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  }
+
   .text-2xs {
     font-size: 0.7rem;
   }
