--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -556,9 +556,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 7 / 12 + 1rem),
+                    white calc(100% * 3 / 12 + 1rem)
     );
   }
 
@@ -778,6 +778,17 @@
     @media (min-width: 1536px) {
       right: 4rem;
     }
+  }
+
+  .item-slide-button-position {
+    display: flex;
+    justify-content: space-between;
+
+    position: absolute;
+    transform: translate(0, -50%);
+    top: 50%;
+    left: 0;
+    right: 0;
   }
 
   .slideshow-button-position {
