--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -290,6 +290,10 @@
     bottom: calc(100% * 7 / 12);
   }
 
+  .bottom-8\/12 {
+    bottom: calc(100% * 8 / 12);
+  }
+
   .mt-full {
     margin-top: 100vh;
   }
@@ -557,8 +561,8 @@
   .team-members-bg {
     background: linear-gradient(
       to top,
-      #dfff85 calc(100% * 7 / 12 + 1rem),
-      white calc(100% * 3 / 12 + 1rem)
+      #dfff85 calc(100% * 8 / 12 + 1rem),
+      white calc(100% * 4 / 12 + 1rem)
     );
   }
 
