added sticky menu

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -95,6 +95,10 @@
     hyphens: auto;
   }
 
+  .transition-height {
+    transition-property: height;
+  }
+
   .text-2xs {
     font-size: 0.7rem;
   }
@@ -560,9 +564,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 8 / 12 + 1rem),
-      white calc(100% * 4 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 8 / 12 + 1rem),
+                    white calc(100% * 4 / 12 + 1rem)
     );
   }
 
