--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -346,6 +346,10 @@
     min-width: 0.75rem;
   }
 
+  .min-w-8 {
+    min-width: 2rem;
+  }
+
   .min-w-64 {
     min-width: 16rem;
   }
@@ -564,9 +568,9 @@
 
   .team-members-bg {
     background: linear-gradient(
-      to top,
-      #dfff85 calc(100% * 8 / 12 + 1rem),
-      white calc(100% * 4 / 12 + 1rem)
+                    to top,
+                    #dfff85 calc(100% * 8 / 12 + 1rem),
+                    white calc(100% * 4 / 12 + 1rem)
     );
   }
 
