--- a/src/components/products-page/products-menu/range-slider/RangeSlider.module.scss
+++ b/src/components/products-page/products-menu/range-slider/RangeSlider.module.scss
@@ -12,8 +12,7 @@
 }
 
 .sliderTrack,
-.sliderRange,
-{
+.sliderRange {
   position: absolute;
 }
 
@@ -64,7 +63,7 @@
 
 /* For Chrome browsers */
 .thumb::-webkit-slider-thumb {
-  background-color: #2C148E;
+  background-color: #2c148e;
   border: 0.2rem solid white;
   border-radius: 50%;
   cursor: pointer;
@@ -77,7 +76,7 @@
 
 /* For Firefox browsers */
 .thumb::-moz-range-thumb {
-  background-color: #2C148E;
+  background-color: #2c148e;
   border: 0.2rem solid white;
   border-radius: 50%;
   cursor: pointer;
