added adjustment for resize

--- a/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
+++ b/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
@@ -6,7 +6,7 @@
   overflow: visible;
   padding: 0;
   position: relative;
-  width: 400px;
+  width: 100%;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
