--- a/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
+++ b/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
@@ -1,15 +1,11 @@
 .container {
-  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
-  background-color: #444444;
-  height: 20px;
+  background-color: rgba(44, 20, 142, 0.25);
+  height: 0.4rem;
   top: 50px;
   overflow: visible;
   padding: 0;
   position: relative;
   width: 100%;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
 }
 
 .knob1 {
@@ -21,35 +17,19 @@
 }
 
 .knob {
-  text-align: center;
-  font-family: Asap, Avenir, Arial, sans-serif;
-  width: 15px;
-  height: 50px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  line-height: 100px;
-  color: black;
   position: absolute;
-  top: -17px;
-  z-index: 2;
-  border: 2px solid rgba(0, 0, 0, 0.4);
+  background-color: #2c148e;
+  border: 0.2rem solid white;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  cursor: pointer;
+  height: 2rem;
+  width: 2rem;
+  pointer-events: all;
 }
 
 .range {
-  background-color: lime;
-  height: 15px;
-  width: 10px;
-  position: relative;
-  top: 2px;
-  box-shadow: inset 0px 0px 10px black;
+  background-color: #2c148e;
 }
 
-.gsap {
-  color: green;
-}
-
-.ancient {
-  font-size: 14px;
-  color: #555;
-}
