--- a/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
+++ b/src/components/products-page/products-menu/range-slider/RangeSliderGsap.module.scss
@@ -1,7 +1,7 @@
 .container {
   background-color: rgba(44, 20, 142, 0.25);
   height: 0.4rem;
-  top: 50px;
+  //top: 50px;
   overflow: visible;
   padding: 0;
   position: relative;
@@ -19,7 +19,7 @@
 .knob {
   position: absolute;
   background-color: #2c148e;
-  border: 0.2rem solid white;
+  border: 0.3rem solid white;
   border-radius: 50%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -32,4 +32,3 @@
 .range {
   background-color: #2c148e;
 }
-
